--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,11 +7,12 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/lumen-framework": "5.3.*",
-        "vlucas/phpdotenv": "~2.2"
+        "vlucas/phpdotenv": "~2.2",
+        "predis/predis": "^1.1",
+        "illuminate/redis": "^5.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~5.0",
         "mockery/mockery": "~0.9"
     },
     "autoload": {
